Sanjyot Initialize First Commit

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
     
                     <div class="row submit_location">
-                        <button class="search" onclick="changeColor()">Search</button>
+                        <button class="search">Search</button>
                     </div>
                 </div>
             </div>
