--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </div>
         <div class="nav-bottom">
             <ul class="bottom-nav">
-                <li class="active"><a href="#"><i class="fa-solid fa-house"></i> &nbsp;Home</a></li>
-                <li><a class="item" href="#"><i class="fa fa-exclamation-circle"></i> &nbsp;About</a></li>
-                <li><a class="item" href="#"><i class="fa-solid fa-gear"></i> &nbsp;Our Services</a></li>
-                <li><a class="item" href="#"><i class="fa-solid fa-user"></i> &nbsp;Contact</a></li>
+                <li class="active"><a class="item"><i class="fa-solid fa-house"></i> &nbsp;Home</a></li>
+                <li><a class="item"><i class="fa fa-exclamation-circle"></i> &nbsp;About</a></li>
+                <li><a class="item"><i class="fa-solid fa-gear"></i> &nbsp;Our Services</a></li>
+                <li><a class="item"><i class="fa-solid fa-user"></i> &nbsp;Contact</a></li>
             </ul>
         </div>
     </header>
