--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carpool: Get the perfect choice!</title>
 
     <!-- css stylesheets -->
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
@@ -132,7 +132,7 @@
             </div>
             <div class="col-lg-4 discription">
                 <div class="icon_div">
-                    <i class="icon fa-solid fa-car fa-3x" style="padding-top: 3%;"></i>
+                    <i class="icon fa-solid fa-car fa-3x"></i>
                 </div>
                 <h3>Convenient and Sustainability</h3>
                 <p>Carpooling services offer convenient pick-up and drop
