--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <form class="row g-3 m-5 p-4 shadow" id="user-input">
                     <div class="container">
-                        <label for="" class="form-label">Enter Ride Details:</label>
+                        <label for="" class="form-label">Enter Ride Details :</label>
                     </div>
 
                     <div class="input-group">
@@ -156,12 +156,11 @@
                 <p>Carpooling services offer convenient pick-up and drop
                     -off locations, and the ability to schedule rides in advance.</p>
             </div>
+            <hr class="mb-5 mt-5" style="width: 50%;">
         </div>
-
     </section>
 
     <!-- publish a ride -->
-    <hr>
     <section id="publish_ride">
         <div class="row container-fluid">
             <div class="col-6 publish-div1">
