--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
     </section>
 
     <!-- Carousel -->
-    <section>
-
+    <section style="height: 30em;">
+        Hello
     </section>
 
     <!-- footer -->
@@ -269,7 +269,7 @@
         </div>
     </footer>
 
+    <script src="index.js"></script>
 </body>
-<script src="index.js"></script>
 
 </html>
