--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <!-- Carousel -->
     <section id="Benefits">
         
-        <h1>Why Carpool..???</h1>
+        <h1><strong>Why Carpool..???</strong> </h1>
         <div class="benefits-box">
             <div id="Benefits-slides" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -240,7 +240,7 @@
                 <div class="about-details">
                     <ul>
                         <li>
-                            <a href="How_it_Works_page/How_it_works.html">How it Works</a>
+                            <a href="How_it_works/How_it_works.html">How it Works</a>
                         </li>
 
                         <li>
@@ -252,7 +252,7 @@
                         </li>
 
                         <li>
-                            <a href="#">Safety</a>
+                            <a href="security_page/security.html">Safety</a>
                         </li>
 
                         <li>
