--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         </li>
 
                         <li>
-                            <a href="security_page/security.html">Safety</a>
+                            <a href="/security_page/security.html">Safety</a>
                         </li>
 
                         <li>
