--- a/How_it_Works_page/How_it_works.html
+++ b/How_it_Works_page/How_it_works.html
@@ -20,6 +20,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
   <!-- bootstrap scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
@@ -210,79 +213,79 @@
 
   <footer id="about">
     <div class="row container-fluid">
-        <div class="col-6 about-left">
-            <div class="about-head">
-                <h1>About</h1>
-            </div>
-            <div class="about-details">
-                <ul>
-                    <li>
-                        <a href="How_it_works/How_it_works.html">How it Works</a>
-                    </li>
+      <div class="col-6 about-left">
+        <div class="about-head">
+          <h1>About</h1>
+        </div>
+        <div class="about-details">
+          <ul>
+            <li>
+              <a href="How_it_works/How_it_works.html">How it Works</a>
+            </li>
 
-                    <li>
-                        <a href="#">About us</a>
-                    </li>
+            <li>
+              <a href="#">About us</a>
+            </li>
 
-                    <li>
-                        <a href="#">Help and Support</a>
-                    </li>
+            <li>
+              <a href="#">Help and Support</a>
+            </li>
 
-                    <li>
-                        <a href="#">Safety</a>
-                    </li>
+            <li>
+              <a href="#">Safety</a>
+            </li>
 
-                    <li>
-                        <a href="#">Contact us</a>
-                    </li>
-                </ul>
-
-
+            <li>
+              <a href="#">Contact us</a>
+            </li>
+          </ul>
 
 
 
-            </div>
+
+
+        </div>
+      </div>
+
+      <div class="col-6 about-right">
+        <div class="footer-img">
+          <img class="carpool-img" src="carpool.png" alt="carpool-img">
         </div>
 
-        <div class="col-6 about-right">
-            <div class="footer-img">
-                <img class="carpool-img" src="carpool.png" alt="carpool-img">
-            </div>
+        <h4 class="social-head">Connect us on...</h4>
 
-            <h4 class="social-head">Connect us on...</h4>
-
-            <div class="social">
-                <span class="spanspace">
-                    <a href="www.facebook.com"><i class="social-icon fa-brands fa-facebook fa-2x"></i></a>
-                </span>
-                <span class="spanspace">
-                    <a href="www.instagram.com"><i class="social-icon fa-brands fa-instagram fa-2x"></i></a>
-                </span>
-                <span class="spanspace">
-                    <a href="www.twitter.com"><i class="social-icon fa-brands fa-twitter fa-2x"></i></a>
-                </span>
-                <span class="spanspace">
-                    <a href="www.gmail.com"><i class="social-icon fa-solid fa-envelope fa-2x"></i></a>
-                </span>
-                <span class="spanspace">
-                    <a href="www.linedin.com"><i class="social-icon fa-brands fa-linkedin fa-2x"></i></a>
-                </span>
-            </div>
+        <div class="social">
+          <span class="spanspace">
+            <a href="www.facebook.com"><i class="social-icon fa-brands fa-facebook fa-2x"></i></a>
+          </span>
+          <span class="spanspace">
+            <a href="www.instagram.com"><i class="social-icon fa-brands fa-instagram fa-2x"></i></a>
+          </span>
+          <span class="spanspace">
+            <a href="www.twitter.com"><i class="social-icon fa-brands fa-twitter fa-2x"></i></a>
+          </span>
+          <span class="spanspace">
+            <a href="www.gmail.com"><i class="social-icon fa-solid fa-envelope fa-2x"></i></a>
+          </span>
+          <span class="spanspace">
+            <a href="www.linedin.com"><i class="social-icon fa-brands fa-linkedin fa-2x"></i></a>
+          </span>
         </div>
+      </div>
     </div>
     <div class="terms-copyright container-fluid">
-        <div class="row">
-            <div class="col-6 terms">
-                <p>Terms and Condition...</p>
-            </div>
-
-            <div class="col-6 copyright">
-                <p>Carpool,2023 ©</p>
-            </div>
-
+      <div class="row">
+        <div class="col-6 terms">
+          <p>Terms and Condition...</p>
         </div>
+
+        <div class="col-6 copyright">
+          <p>Carpool,2023 ©</p>
+        </div>
+
+      </div>
     </div>
-</footer>
+  </footer>
 
 
 </body>
