--- a/security_page/security.html
+++ b/security_page/security.html
@@ -21,6 +21,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <!-- bootstrap scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
@@ -124,10 +127,10 @@
                                 unsolicited messages on the BlaBlaCar platform or third party messaging apps.</li>
                         </ul>
                         </p>
-                        <h4 id="simple-list-item-4"><strong>Noticed something suspicious? Report it.</strong>  </h4>
+                        <h4 id="simple-list-item-4"><strong>Noticed something suspicious? Report it.</strong> </h4>
                         <p>Help us protect you from scams by reporting if you notice a suspicious message, if you have
                             been scammed or if you think someone is trying to scam you.</p>
-                            <button>Report</button>
+                        <button>Report</button>
                     </div>
                 </div>
             </div>
