--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
 
                     <div class="col-6 pl-3 pr-2  input-group">
-                        <input type="number" class="form-control" id="passenger-count" placeholder="Persons...">
+                        <input type="number" class="form-control" id="passenger-count" placeholder="Persons..." min="1">
                         <label for="passenger-count" class="input-group-text"><i class="fa-solid fa-user"></i>
                         </label>
                     </div>
