--- a/How_it_Works_page/How_it_works.html
+++ b/How_it_Works_page/How_it_works.html
@@ -55,9 +55,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="/index.html">Home</a>
-          <a class="nav-link" href="#">About</a>
-          <a class="nav-link" href="#">Contact us</a>
+          <a class="nav-link active" id="active"  href="/index.html">Home</a>
+          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="/contact/contact.html">Contact us</a>
         </div>
       </div>
     </div>
@@ -220,7 +220,7 @@
         <div class="about-details">
           <ul>
             <li>
-              <a href="How_it_works/How_it_works.html">How it Works</a>
+              <a href="/How_it_works/How_it_works.html">How it Works</a>
             </li>
 
             <li>
@@ -232,11 +232,11 @@
             </li>
 
             <li>
-              <a href="#">Safety</a>
+              <a href="/security_page/security.html">Safety</a>
             </li>
 
             <li>
-              <a href="#">Contact us</a>
+              <a href="/contact/contact.html">Contact us</a>
             </li>
           </ul>
 
