--- a/Log_in_page/login.html
+++ b/Log_in_page/login.html
@@ -18,7 +18,7 @@
         <h1 class="heading">login</h1>
         <input type="email" placeholder="email" autocomplete="off" class="email" required>
         <input type="password" placeholder="password" autocomplete="off" class="password" required>
-        <button class="submit-btn">log in</button>
+        <button class="submit-btn"><a href="/ProfilePage/profilePage.html" style="text-decoration: none; color: grey;">log in</a></button>
         <a href="register.html" class="link">don't have an account? Register one</a>
     </div>
 
