--- a/ProfilePage/profilePage.html
+++ b/ProfilePage/profilePage.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="container">
               <a class="navbar-brand" href="#" style="cursor: default;">
-                <img src="/Pbl_Project/images/logo.png" alt="Bootstrap" width="70" height="65">
+                <img src="/images/carpool.png" alt="Carpool" width="100%" height="65">
               </a>
               <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="50">
             </div>
@@ -23,7 +23,7 @@
               <!-- Breadcrumb -->
               <nav aria-label="breadcrumb" class="main-breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="/Pbl_Project/index.html" class="bread-profile-item">Home</a></li>
+                  <li class="breadcrumb-item"><a href="/index2.html" class="bread-profile-item">Home</a></li>
                   <li class="breadcrumb-item active" aria-current="page"><a href="/Pbl_Project/ProfilePage/profilePage.html" class="bread-profile-item">User Profile</a></li>
                 </ol>
               </nav>
@@ -36,10 +36,10 @@
                       <div class="d-flex flex-column align-items-center text-center">
                         <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
                         <div class="mt-3">
-                          <h4>Srinivas Ramanujan</h4>
+                          <h4>Srinivasa Ramanujan</h4>
                           <p class="text-secondary mb-1">Mathematician</p>
                           <p class="text-muted font-size-sm">Legend Colony, Kerala, India</p>
-                          <button class="btn btn-outline-primary">Edit Profile</button>
+                          <button class="btn btn-primary"><a href="/index.html" style="text-decoration: none; color: white;">Log Out</a></button>
                         </div>
                       </div>
                     </div>
@@ -367,7 +367,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
         <footer>
-
+          
         </footer>
 </body>
 </html>
